--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ngrx/schematics": "^9.1.2",
+    "@ngrx/store": "^8.6.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
