--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ngrx/effects": "^9.1.2",
+    "@ngrx/schematics": "^9.1.2",
+    "@ngrx/store": "^9.1.2",
+    "@ngrx/store-devtools": "^9.1.2",
     "core-js": "^2.5.4",
     "nedb": "^1.8.0",
     "rxjs": "~6.5.1",
