--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     ],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-parameter-properties": "off",
     "@typescript-eslint/no-object-literal-type-assertion": "off",
     "@typescript-eslint/camelcase": "off",
