Enable PWA capabilities

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.1000.4",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "@capacitor/android": "^2.0.2",
     "@capacitor/core": "2.0.2",
     "@ionic-native/core": "^5.0.7",
